# agent-services

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  README.md  STATUS.md  TODO.md  TODO_DAG.md
.agents/plugins/: marketplace.json
crates/agent-cli/src/: main.rs
crates/agent-core/src/: lib.rs
crates/arcwell-cli/src/: channels_work_cli.rs  cli_dispatch.rs  commands.rs  commerce_job_radar_cli.rs  guard_cli.rs  import_claude.rs  import_policy_cli.rs  knowledge_research_cli.rs  main.rs  mcp.rs  proof_cli.rs  server.rs  service_memory_cli.rs  slash_alias.rs  tests.rs  x_cli.rs
crates/arcwell-core/: Cargo.toml
crates/arcwell-core/src/: backup.rs  channel_project_memory.rs  commerce_research.rs  common.rs  db_schema.rs  health_validation.rs  knowledge.rs  lib.rs  policy_digest.rs  radar_digest.rs  research_reports_search.rs  store.rs  tests.rs  types.rs  work_procedure.rs  x_sources.rs
crates/arcwell-memory/: Cargo.toml
crates/arcwell-memory-client/: Cargo.toml
crates/arcwell-memory-client/src/: lib.rs
crates/arcwell-memory-core/: Cargo.toml
crates/arcwell-memory-core/benches/: core_ops.rs
crates/arcwell-memory-core/src/: config.rs  enums.rs  error.rs  filters.rs  history.rs  lib.rs  memory.rs  nlp.rs  scoring.rs  testing.rs  text.rs  traits.rs  types.rs  util.rs
crates/arcwell-memory-core/src/prompts/: constants.rs  mod.rs
crates/arcwell-memory-core/tests/: m0_core.rs  m1_pipeline.rs  port_entity_extraction.rs  port_lemmatization.rs  port_memory_main.rs  port_prompts.rs  port_scoring.rs  port_storage.rs  port_text_parsing.rs
crates/arcwell-memory-embed/: Cargo.toml
crates/arcwell-memory-embed/src/: azure.rs  config.rs  factory.rs  gemini.rs  lib.rs  mock.rs  ollama.rs  openai.rs
crates/arcwell-memory-embed/tests/: embed.rs
crates/arcwell-memory-llm/: Cargo.toml
crates/arcwell-memory-llm/src/: anthropic.rs  azure.rs  config.rs  factory.rs  gemini.rs  lib.rs  mock.rs  ollama.rs  openai.rs
crates/arcwell-memory-llm/tests/: llm.rs
crates/arcwell-memory-proxy/: Cargo.toml
crates/arcwell-memory-proxy/src/: lib.rs
crates/arcwell-memory-proxy/tests/: proxy.rs
crates/arcwell-memory-rerank/: Cargo.toml
crates/arcwell-memory-rerank/src/: cohere.rs  config.rs  factory.rs  lib.rs  llm.rs  util.rs  zero_entropy.rs
crates/arcwell-memory-rerank/tests/: port_reranker_config.rs  port_reranker_rerank.rs  rerank.rs
crates/arcwell-memory-server/: Cargo.toml
crates/arcwell-memory-server/src/: lib.rs  main.rs
crates/arcwell-memory-server/tests/: roundtrip.rs
crates/arcwell-memory-vector/: Cargo.toml
crates/arcwell-memory-vector/src/: config.rs  embedded.rs  factory.rs  lib.rs  pgvector.rs  qdrant.rs
crates/arcwell-memory-vector/tests/: embedded.rs  qdrant_rest.rs
crates/arcwell-memory/benches/: memory_ops.rs
crates/arcwell-memory/examples/: bench_run.rs  parity_run.rs  quickstart.rs
crates/arcwell-memory/src/: lib.rs
crates/arcwell-memory/tests/: e2e.rs
docs/: adversarial-testing.md  arcwell-architecture-report.md  arcwell-controller-design.md  arcwell-x-architecture-implementation-plan.md  autonomous-knowledge-system-completion-plan.md  birdclaw-x-upgrade-plan.md  codex-plugin-commands.md  deep-research-system-design.md  functionality-and-packages.md  google-workspace-strategy.md  horizon-radar-digest-implementation-plan.md  live-e2e-testing.md  memory-integration.md  packaging-and-operations.md  phase-6-workers-adapters-x.md  qualified-commerce-research-design.md  reddit-browser-ingestion.md  unified-knowledge-pipeline-implementation-plan.md
docs/reference-implementation-plans/: agent-reach-adapter-doctor-plan.md  horizon-radar-stage-two-plan.md  mission-control-ops-cockpit-plan.md  nanobot-channel-workbench-plan.md  nanoclaw-controller-isolation-plan.md  oh-my-codex-host-workflow-plan.md  openviking-context-fs-plan.md  paperclip-goal-governance-plan.md  postiz-social-outbox-plan.md  screenpipe-ambient-context-plan.md
docs/reports/: 2026-06-27-ai-briefing-editorial.md  2026-07-01-ai-briefing-editorial.md  2026-07-01-codex-meetup-arcwell-stories.html  2026-07-01-codex-meetup-arcwell-stories.md
hosts/claude/: README.md
plugins/arcwell-codex/: README.md
plugins/arcwell-codex/commands/: backup-restore.md  channel-authorizations.md  channel-authorize.md  channel-deliveries.md  channel-record.md  codex-host-adapter.md  cost-check.md  cost-policy-list.md  cost-policy-set.md  digest-alert-schedule-create.md  digest-alert-schedules.md  digest-alert-ticks.md  digest-candidate-approve.md  digest-candidate-deliver-email.md  digest-candidate-delivery-check.md  digest-candidate-reject.md  edge-dead-letter.md  edge-lease.md  mem0-add.md  mem0-delete.md  mem0-forget-user.md  mem0-history.md  mem0-search.md  mem0-update.md  memory-capture.md  memory-dream.md  memory-events.md  memory-recall.md  memory-search.md  ops.md  (+29 more)
plugins/arcwell-guard/: README.md
scripts/: arcwell-dev  autonomous-knowledge-baseline-proof  autonomous-knowledge-claim-audit  claude-mcp-smoke  daily-briefing-catchup-proof  daily-briefing-live-observation-proof  deep-research-production-proof  digest-alert-scheduled-production-proof  edge-live-smoke  gmail-mailbox-proof  knowledge-cluster-model-writer-proof  knowledge-cluster-proposal-production-proof  knowledge-digest-recurrence-proof  knowledge-entity-resolution-production-proof  knowledge-live-e2e-proof  knowledge-model-cluster-scheduled-proof  knowledge-model-writer-scheduled-proof  knowledge-wall-clock-recurrence-proof  ops-ui-browser-smoke  radar-balance-production-proof  radar-live-semantic-dedupe-production-proof  radar-ranking-review-production-proof  radar-source-quality-decay-production-proof  radar-source-quality-trends-proof  radar-worker-production-proof  reddit-browser-production-proof  release-readiness-smoke  service-live-smoke  service-recurrence-proof  telegram-live-smoke  verify-codex-plugin-docs  verify-tracked-email-placeholders  wiki-freshness-ops-snapshot  wiki-freshness-ops-snapshot-test  wiki-job-dedupe  wiki-job-dedupe-test  x-api-mcp-recurrence-proof  x-credential-probe  x-live-smoke  x-mcp-xurl-proof  (+8 more)
(+154 files in other folders)
