[workspace]
members = [
  "crates/arcwell-core",
  "crates/arcwell-cli",
  "crates/arcwell-memory-core",
  "crates/arcwell-memory-embed",
  "crates/arcwell-memory-llm",
  "crates/arcwell-memory-vector",
  "crates/arcwell-memory-rerank",
  "crates/arcwell-memory",
  "crates/arcwell-memory-client",
  "crates/arcwell-memory-server",
  "crates/arcwell-memory-proxy",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/chrischabot/arcwell"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
criterion = { version = "0.5", features = ["html_reports"] }
futures-util = "0.3"
md-5 = "0.10"
pgvector = { version = "0.4", features = ["postgres"] }
regex = "1"
roxmltree = "0.20"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "1"
toml = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync", "time", "signal"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
wiremock = "0.6"
arcwell-memory = { path = "crates/arcwell-memory" }
