[package]
name = "arcwell-memory-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP client for the Arcwell Memory REST server"

[dependencies]
arcwell-memory-core = { path = "../arcwell-memory-core" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true