[package]
name = "arcwell-memory-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LLM providers for the Arcwell Memory (OpenAI, Azure, Anthropic, Gemini, Ollama, OpenAI-compatible)"

[dependencies]
arcwell-memory-core = { path = "../arcwell-memory-core" }
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
reqwest.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
wiremock.workspace = true