[package]
name = "arcwell-memory-rerank"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Reranker providers for the Arcwell Memory (Cohere, ZeroEntropy, LLM)"

[dependencies]
arcwell-memory-core = { path = "../arcwell-memory-core" }
arcwell-memory-llm = { path = "../arcwell-memory-llm" }
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
reqwest.workspace = true
regex.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
wiremock.workspace = true