[package]
name = "arcwell-memory-vector"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Vector store backends for the Arcwell Memory (embedded default, qdrant, pgvector)"

[dependencies]
arcwell-memory-core = { path = "../arcwell-memory-core" }
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tracing.workspace = true
reqwest = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"], optional = true }
pgvector = { version = "0.4", features = ["postgres"], optional = true }
futures-util = { version = "0.3", optional = true }

[features]
default = []
qdrant = ["dep:reqwest", "dep:tokio"]
pgvector = ["dep:tokio", "dep:tokio-postgres", "dep:pgvector", "dep:futures-util"]

[dev-dependencies]
tokio.workspace = true
tempfile.workspace = true
serde_json.workspace = true
wiremock.workspace = true