[package]
name = "arcwell-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Arcwell Memory - long-term memory for AI agents (Rust). Facade wiring embedders, LLMs, vector stores, and rerankers."

[dependencies]
arcwell-memory-core = { path = "../arcwell-memory-core" }
arcwell-memory-embed = { path = "../arcwell-memory-embed" }
arcwell-memory-llm = { path = "../arcwell-memory-llm" }
arcwell-memory-vector = { path = "../arcwell-memory-vector" }
arcwell-memory-rerank = { path = "../arcwell-memory-rerank" }
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "sync"] }

[features]
default = []
qdrant = ["arcwell-memory-vector/qdrant"]
pgvector = ["arcwell-memory-vector/pgvector"]

[dev-dependencies]
tokio.workspace = true
criterion.workspace = true
async-trait.workspace = true

[[bench]]
name = "memory_ops"
harness = false